<resources>
    <string name="app_name">KalmLang</string>
    <string name="start">Начать</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="caption1test"><b>Земш болн Темсн</b>\nФрукты и Овощи</string>
    <string name="caption1"><b>Говорение</b></string>
    <string name="caption2"><b>Свойства</b></string>
    <string name="caption3"><b>Счёт</b></string>
    <string name="test_words">Текст на калм.\nТекст на русс.</string>
    <string name="test_q">Очень большой текст с вопросом.</string>
    <string name="word1">Альмн\nЯблоко</string>
    <string name="btn_go">Ответить</string>
    <string name="btn_check">Проверить</string>
    <string name="lvl2_1">Вопросы по картинке</string>
    <string name="lvl2_2">Перетаскивание</string>
    <string name="lvl3_1">Определить по вкусу</string>
    <string name="lvl3_2">Посчитать</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num10">10</string>
    <string name="num11">11</string>
    <string name="num12">12</string>
    <string name="num13">13</string>
    <string name="num14">14</string>
    <string name="production">Произношение</string>
    <string name="property">Ответьте на вопросы:</string>
    <string name="testy">Определить по вкусу:</string>
    <string name="check">Определить количество:</string>
    <string name="x">X</string>
    <string name="q">?</string>
</resources>