<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background"/>

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:background="@drawable/button_stroke_black95_press_white"
                    android:textColor="@color/black95"
                    android:textSize="24sp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textAllCaps="false"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caption1test"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="-16dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:id="@+id/tmp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/caption1"
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:text="@string/caption1"
                            android:background="@drawable/button_gamelevels"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/caption2"
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:text="@string/caption2"
                            android:background="@drawable/button_gamelevels"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/caption3"
                            android:layout_width="120dp"
                            android:layout_height="60dp"
                            android:text="@string/caption3"
                            android:background="@drawable/button_gamelevels"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:gravity="center"/>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>