<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogbackgroundlevels1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/previewbackgroundone"
    android:gravity="center"
    android:orientation="vertical"
    android:scaleType="centerCrop">

    <LinearLayout
        android:id="@+id/container0levels1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/container1levels1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btncloselevels1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@drawable/button_stroke_black95_press_white"
                android:gravity="center"
                android:text="@string/x"
                android:textColor="@color/black95"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/container2levels1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/line1levels1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"
                            android:text="@string/lvl3_1"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2Lvl1Choose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/button_gamelevels"
                            android:gravity="center"
                            android:text="@string/lvl3_2"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>